--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">MyViewgroup</string>
+    <string name="app_name">Latihan View dan ViewGroup</string>
+    <string name="linear_text">Linear Layout</string>
+    <string name="relative_text">relative layout</string>
+    <string name="constraint_text">constraint layout</string>
 </resources>
